--- a/home.html
+++ b/home.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
    <html>
    	<head>
+   		<meta charset="UTF-8">
    		<title></title>
+
    		<style>
    			body{
    				background:black;
@@ -182,6 +184,7 @@ header{
 
    		<!-- header -->
    		<header>
+   			<h1><a href="new.html">Nahom</a></h1>
    			<h1 class="h11">Welocme Everyone  </h1>
    			<p class="p1">
              
