--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <div class="container">
     <!-- Example row of columns -->
-    <div class="row">
+    <div class="columns">
       <div class="col">
         <h2>Computers</h2>
         <p>A computer is a machine that can be instructed to carry out sequences of arithmetic or logical operations automatically via computer programming. Modern computers have the ability to follow generalized sets of operations, called programs. These programs enable computers to perform an extremely wide range of tasks.  </p>
