--- a/books.html
+++ b/books.html
@@ -62,7 +62,7 @@
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron">
     <div class="container">
-      <h2>Best Life Changing & Inspiring Books To Read in 2020</h2>
+      <h1 class="display-3">Best Life Changing & Inspiring Books To Read in 2020</h1>
       
   
     </div>
