--- a/about.html
+++ b/about.html
@@ -113,7 +113,9 @@
 </main>
 
 <footer class="container">
-  <p>&copy; <a href ="nahomm.php">Geo</a> 2020 All Rights Reserved <a href="contact.html">Contact</a>  
+  <p>&copy; Geo 2020 All Rights Reserved <a href="http://m.me/USERNAME" target="_blank">
+    Message Me on Facebook
+</a>Contact</a>  
           </p>
           
 </footer>
