--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
 </main>
 
 <footer class="container">
-  <p>&copy; Geo 2020 All Rights Reserved <a href="http://m.me/USERNAME" target="_blank">
+  <p>&copy; Geo 2020 All Rights Reserved <a href="http://m.me/" target="_blank">
     Message Me on Facebook
 </a>Contact</a>  
           </p>
