--- a/about.html
+++ b/about.html
@@ -111,6 +111,10 @@
    
   
 </main>
+  <a class="mywtsp" href="whatsapp://send?text=🤗 sun has sent you Super Dare Friendship Quiz 👸🤴. %0ATake this Challenge NOW %0A🤯👇👇👇👇🤯%0A https://wishenger.com/en/quiz/e3de9b" data-action="share/whatsapp/share" style="height: 43px; border-radius: 7px;">
+<img align="left" width="25px" height="25px" src="https://bucketforawsend.s3.amazonaws.com/qwa/en1/assets/images/logow.png" /><b style="font-size: 12px;"> SHARE</b></a>
+<a class="mymsgr" href="fb-messenger://share?link=🤗 sun has sent you Super Dare Friendship Quiz 👸🤴. %0ATake this Challenge NOW %0A🤯👇👇👇👇🤯%0A https://wishenger.com/en/quiz/e3de9b" data-action="share/whatsapp/share" style="height: 43px; border-radius: 7px;">
+<img align="left" width="25px" height="25px" src="https://bucketforawsend.s3.amazonaws.com/qwa/en1/assets/images/logom.png" /><b style="font-size: 12px;"> SHARE</b></a>
 
 <footer class="container">
   <p>&copy; Geo 2020 All Rights Reservedddd <a href="https://m.me" target="_blank">
